[package]
name = "structy"
version = "0.1.0"
edition = "2021"
authors = ["Jedsek <jedsek@qq.com>"]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/rinout/latest/structy"
homepage = "https://github.com/jedsek/structy"
repository = "https://github.com/jedsek/structt"
keywords = [ "arguments", "syntax", "named", "tuple"]
description = "Anonymous struct and named arguments in rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
